--- a/public/css/components/_features.scss
+++ b/public/css/components/_features.scss
@@ -78,7 +78,7 @@ features {
     }
 
     .ka-landing-feature-button {
-        width: 33%;
+        width: 32%;
         margin: 2px;
         float: left;
         height: 266px;
