--- a/public/css/components/_masthead.scss
+++ b/public/css/components/_masthead.scss
@@ -5,9 +5,9 @@ masthead {
 	padding-top: 40px;
     
     #ka-landing-masthead {
-        height: 323px;
         overflow: hidden;
         cursor: default;
+        margin-bottom: 20px;
     }
     
     img{
